<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MtkBatteryWarmning</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- battery warning string start -->
    <!-- Titles for battery warning dialog -->
    <string name="title_charger_over_voltage">"Over Charger Voltage"</string>
    <string name="title_battery_over_temperature">"Over Battery Temperature"</string>
    <string name="title_over_current_protection">"Over Current Protection"</string>
    <string name="title_battery_over_voltage">"Over Battery Voltage"</string>
    <string name="title_safety_timer_timeout">"Over Charge Time"</string>
    <string name="title_battery_low_temperature">"Low Battery Temperature"</string>
    <!-- Messages for battery warning dialog -->
    <string name="msg_charger_over_voltage">"Your charger is over voltage, please disconnect the charger!"</string>
    <string name="msg_battery_over_temperature">"Your battery is over temperature, please remove the battery!"</string>
    <string name="msg_over_current_protection">"Your battery is over current-protection, please remove the battery!"</string>
    <string name="msg_battery_over_voltage">"Your battery is over voltage, please remove the battery!"</string>
    <string name="msg_safety_timer_timeout">"Charge time is too long, please disconnect the charger!"</string>
    <string name="msg_battery_low_temperature">"Your battery temperature is too low, please disconnect the charger!"</string>
    <string name="btn_ok_msg">"Snooze"</string>
    <string name="btn_cancel_msg">"Dismiss"</string>
    <!-- battery warning string end -->

    <!-- thermal warning string start -->
    <string name="thermal_over_temperature">"The data service is limited due to the overheating of the communication module. If the overheating continues, the communication module will be shut down. Please move to a cool place with good signal, or turn off 4G in settings."</string>
    <string name="thermal_clear_temperature">"The overheating of the communication module is cleared. All the communication functions are restored."</string>
    <!-- thermal warning string end -->
    
</resources>
