<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mtkbatterywarmning.MainActivity" >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="msg_charger_over_voltage"
        android:text="@string/title_charger_over_voltage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="msg_battery_over_temperature"
        android:text="@string/title_battery_over_temperature" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="msg_over_current_protection"
        android:text="@string/title_over_current_protection" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="msg_battery_over_voltage"
        android:text="@string/title_battery_over_voltage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="msg_safety_timer_timeout"
        android:text="@string/title_safety_timer_timeout" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="msg_battery_low_temperature"
        android:text="@string/title_battery_low_temperature" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="thermal_clear_temperature"
        android:text="@string/thermal_clear_temperature" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="thermal_over_temperature"
        android:text="@string/thermal_over_temperature" />

</LinearLayout>